-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: jfx11, 8u191
-
Component/s: javafx
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8222779 | 8u231 | Alexander Matveev | P3 | Resolved | Fixed | b01 |
| JDK-8232821 | jfx11.0.5 | Alexander Matveev | P3 | Closed | Fixed |
ADDITIONAL SYSTEM INFORMATION :
Windows 10, Java 11.0.1, JavaFX 11
A DESCRIPTION OF THE PROBLEM :
MediaPlayer stays in state UNKNOWN with some mp3 files if they have artwork as second mjpeg stream.
Those file are playable by iTunes and VLC without any problem, once artwork is removed using iTunes - MediaPlayer can play the file as expected.
Specific file where issue was discovered is encoded with Lame3.99.
Other files with artwork as png stream are ok. Some other files encoded with different encoders with mjpeg stream are not affected.
Typical output from ffprobe for affected files looks as below:
Input #0, mp3, from '01-01.mp3':
Metadata:
track : 1/49
album_artist : XXX
Engineer : XXX
title : XXX
album : XXX
genre : XXX
artist : XXX
date : 2014-09-03
Duration: 00:12:47.90, start: 0.000000, bitrate: 132 kb/s
Stream #0:0: Audio: mp3, 44100 Hz, stereo, s16p, 128 kb/s
Stream #0:1: Video: mjpeg, yuvj444p(pc, bt470bg/unknown/unknown), 583x520 [SAR 100:100 DAR 583:520], 90k tbr, 90k tbn, 90k tbc
Metadata:
comment : Cover (front)
STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
Play mp3 with mjpeg stream for artwork with MediaPlayer.
EXPECTED VERSUS ACTUAL BEHAVIOR :
EXPECTED -
Music is playing.
ACTUAL -
Music is not playing.
---------- BEGIN SOURCE ----------
Standard example of using MediaPlayer
---------- END SOURCE ----------
CUSTOMER SUBMITTED WORKAROUND :
Remove artwork manually, however could be not possible by end users.
FREQUENCY : always
Windows 10, Java 11.0.1, JavaFX 11
A DESCRIPTION OF THE PROBLEM :
MediaPlayer stays in state UNKNOWN with some mp3 files if they have artwork as second mjpeg stream.
Those file are playable by iTunes and VLC without any problem, once artwork is removed using iTunes - MediaPlayer can play the file as expected.
Specific file where issue was discovered is encoded with Lame3.99.
Other files with artwork as png stream are ok. Some other files encoded with different encoders with mjpeg stream are not affected.
Typical output from ffprobe for affected files looks as below:
Input #0, mp3, from '01-01.mp3':
Metadata:
track : 1/49
album_artist : XXX
Engineer : XXX
title : XXX
album : XXX
genre : XXX
artist : XXX
date : 2014-09-03
Duration: 00:12:47.90, start: 0.000000, bitrate: 132 kb/s
Stream #0:0: Audio: mp3, 44100 Hz, stereo, s16p, 128 kb/s
Stream #0:1: Video: mjpeg, yuvj444p(pc, bt470bg/unknown/unknown), 583x520 [SAR 100:100 DAR 583:520], 90k tbr, 90k tbn, 90k tbc
Metadata:
comment : Cover (front)
STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
Play mp3 with mjpeg stream for artwork with MediaPlayer.
EXPECTED VERSUS ACTUAL BEHAVIOR :
EXPECTED -
Music is playing.
ACTUAL -
Music is not playing.
---------- BEGIN SOURCE ----------
Standard example of using MediaPlayer
---------- END SOURCE ----------
CUSTOMER SUBMITTED WORKAROUND :
Remove artwork manually, however could be not possible by end users.
FREQUENCY : always
- backported by
-
JDK-8222779 [Windows] MediaPlayer does not play some mp3 with artwork stream in mjpeg
-
- Resolved
-
-
JDK-8232821 [Windows] MediaPlayer does not play some mp3 with artwork stream in mjpeg
-
- Closed
-
- duplicates
-
JDK-8210828 MediaPlayer not playing mp3 files with photoshopped album art
-
- Closed
-
- relates to
-
JDK-8199527 Upgrade GStreamer to 1.14
-
- Closed
-
-
JDK-8210828 MediaPlayer not playing mp3 files with photoshopped album art
-
- Closed
-