8213510: [Windows] MediaPlayer does not play some mp3 with artwork stream in mjpeg

Reviewed-by: kcr